--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,13 +86,14 @@
     <h1>AI Orchestra 🎵</h1>
 
     <!-- ⚡ ВИБІР МОДЕЛІ -->
-    <div id="controls">
-        <label>Оберіть модель:</label>
-        <select id="model">
-            <option value="chatgpt-4o-latest">ChatGPT-4o Latest</option>
-            <option value="gpt-5.1-chat-latest">GPT-5.1 Chat Latest</option>
-        </select>
-    </div>
+<div id="controls">
+    <label>Оберіть модель:</label>
+    <select id="model">
+        <option value="chatgpt-4o-latest">ChatGPT-4o Latest</option>
+        <option value="gpt-4o-2024-11-20">GPT-4o (2024-11-20 Snapshot)</option>
+        <option value="gpt-5.1-chat-latest">GPT-5.1 Chat Latest</option>
+    </select>
+</div>
 
     <!-- ЧАТ -->
     <div id="chat"></div>
