--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <title>AI Orchestra</title>
     <link rel="stylesheet" href="style.css">
 
+    <!-- 🟢 ДОДАЄМО MARKDOWN ПІДТРИМКУ -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
     <style>
         body {
             background: #111;
