--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
         }
 
         h1 {
-            color: white;
+            color: #1a1a1a;
             text-align: center;
             padding: 20px;
         }
