--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>AI Orchestra</title>
     <link rel="stylesheet" href="style.css">
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
     <!-- 🟢 ДОДАЄМО MARKDOWN ПІДТРИМКУ -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
